# blog

./: .gitignore  .nojekyll  AGENTS.md  LICENSE  _quarto.yml  about.html  about.qmd  flake.nix  index.html  index.qmd  index.xml  justfile  listings.json  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/scripts/: build.py
.github/workflows/: deploy.yml
apps/: reactive_plots.py  the_ai_company_win_condition.py
nix/garden/: tool_just.nix  tool_nvidia.nix
posts/: _metadata.yml
posts/the-ai-company-win-condition/: index.html  index.qmd
posts/the-taalas-proposition/: index.html  index.qmd
site_libs/bootstrap/: bootstrap-eb6dc03ada319d1747fd1cae6562c423.min.css
templates/: index.html.j2
