[project]
name = "blogz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.19.10",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "fire==0.7.0",
    "jinja2==3.1.3",
    "loguru==0.7.0",
]
